unpackaged/objects/Plan_Of_Study_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Extra_curricular__c</fullName>
        <label>Extra-curricular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>MC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Of_Study__c</fullName>
        <label>Plan Of Study</label>
        <referenceTo>Plan_Of_Study__c</referenceTo>
        <relationshipLabel>Plan Of Study Details</relationshipLabel>
        <relationshipName>Plan_Of_Study_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester 1</fullName>
                </value>
                <value>
                    <fullName>Semester 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan Of Study Detail</label>
    <nameField>
        <displayFormat>POSD-{0000000000}</displayFormat>
        <label>POS Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Of Study Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>